# quickNES Core sources

quickNESSrc = [
	'core/nes_emu/abstract_file.cpp',
	'core/nes_emu/apu_state.cpp',
	'core/nes_emu/Blip_Buffer.cpp',
	'core/nes_emu/Effects_Buffer.cpp',
	'core/nes_emu/Mapper_Fme7.cpp',
	'core/nes_emu/Mapper_Mmc5.cpp',
	'core/nes_emu/Mapper_Namco106.cpp',
	'core/nes_emu/Mapper_Vrc6.cpp',
	'core/nes_emu/misc_mappers.cpp',
	'core/nes_emu/Mapper_15.cpp',
	'core/nes_emu/Mapper_60.cpp',
	'core/nes_emu/Multi_Buffer.cpp',
	'core/nes_emu/Nes_Apu.cpp',
	'core/nes_emu/Nes_Buffer.cpp',
	'core/nes_emu/Nes_Cart.cpp',
	'core/nes_emu/Nes_Core.cpp',
	'core/nes_emu/Nes_Cpu.cpp',
	'core/nes_emu/nes_data.cpp',
	'core/nes_emu/Nes_Effects_Buffer.cpp',
	'core/nes_emu/Nes_Emu.cpp',
	'core/nes_emu/Nes_File.cpp',
	'core/nes_emu/Nes_Fme7_Apu.cpp',
	'core/nes_emu/Nes_Mapper.cpp',
	'core/nes_emu/nes_mappers.cpp',
	'core/nes_emu/Nes_Mmc1.cpp',
	'core/nes_emu/Nes_Mmc3.cpp',
	'core/nes_emu/Mapper_70.cpp',
	'core/nes_emu/Mapper_Misc.cpp',
	'core/nes_emu/Mapper_Unrom512.cpp',
	'core/nes_emu/Mapper_Vrc1.cpp',
	'core/nes_emu/Mapper_Vrc3.cpp',
	'core/nes_emu/Mapper_Vrc2_4.cpp',
	'core/nes_emu/Mapper_Vrc7.cpp',
	'core/nes_emu/Nes_Vrc7.cpp',
	'core/nes_emu/emu2413.cpp',
	'core/nes_emu/emu2413_state.cpp',
	'core/nes_emu/Nes_Namco_Apu.cpp',
	'core/nes_emu/Mmc24.cpp',
	'core/nes_emu/Nes_Oscs.cpp',
	'core/nes_emu/Nes_Ppu.cpp',
	'core/nes_emu/Nes_Ppu_Impl.cpp',
	'core/nes_emu/Nes_Ppu_Rendering.cpp',
	'core/nes_emu/Nes_State.cpp',
	'core/nes_emu/nes_util.cpp',
	'core/nes_emu/Nes_Vrc6_Apu.cpp',
	'core/nes_emu/Data_Reader.cpp',
	'core/nes_emu/Mappers.cpp',
	'core/nes_emu/Mapper_74x161x162x32.cpp',
	'core/nes_emu/Mapper_180.cpp',
	'core/nes_emu/Mapper_193.cpp',
	'core/nes_emu/Mapper_240.cpp',
	'core/nes_emu/Mapper_241.cpp',
	'core/nes_emu/Mapper_244.cpp',
	'core/nes_emu/Mapper_246.cpp',
	'core/nes_emu/Mapper_AveNina.cpp',
	'core/nes_emu/Mapper_IremG101.cpp',
	'core/nes_emu/Mapper_IremTamS1.cpp',
	'core/nes_emu/Mapper_JalecoJF11.cpp',
	'core/nes_emu/Mapper_Namco54xx.cpp',
	'core/nes_emu/Mapper_Sunsoft1.cpp',
	'core/nes_emu/Mapper_Sunsoft2.cpp',
	'core/nes_emu/Mapper_TaitoX1005.cpp',
	'core/nes_emu/Mapper_TaitoTC0190.cpp',
	'core/nes_emu/Mapper_Un1rom.cpp',
	'core/nes_emu/nes_ntsc.cpp'
]

# quickNES Core Configuration

 quickNESDependency = declare_dependency(
  compile_args        : [  ],
  include_directories : include_directories(['.', 'core/nes_emu']),
  sources             : [ quickNESSrc ],
		dependencies        : [ 
						  																		dependency('sdl2'),
		                      ]
 )
